<resources>
    <string name="app_name">BMI_BMR_Calculator</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_calculate">CALCULATE</string>
    <string name="button_previous">PREVIOUS</string>
    <string name="textview_none">none</string>
    <string name="BMI">BMI:</string>
    <string name="BMR">BMR:</string>

    <string name="error_message">error</string>
</resources>
