<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <TextView
        android:id="@+id/text_topic"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:text="@string/app_name"
        android:textColor="#005E8D"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:text="@string/name"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/text_bmi"
        android:layout_width="81dp"
        android:layout_height="53dp"
        android:text="@string/BMI"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/text_bmr"
        android:layout_width="80dp"
        android:layout_height="47dp"
        android:text="@string/BMR"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#A1FF0000"
        android:text="@string/button_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_bmr"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview_none"
        android:textColor="#0E06FC"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@+id/text_name" />

    <TextView
        android:id="@+id/textView_bmi"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview_none"
        android:textColor="#0E06FC"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_bmi"
        app:layout_constraintTop_toTopOf="@+id/text_bmi" />

    <TextView
        android:id="@+id/textView_bmr"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview_none"
        android:textColor="#0E06FC"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_bmr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_bmr"
        app:layout_constraintTop_toTopOf="@+id/text_bmr" />

</android.support.constraint.ConstraintLayout>