<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/text_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_height"
        app:layout_constraintTop_toTopOf="@+id/text_height"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="180dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/text_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text_age"
        app:layout_constraintTop_toTopOf="@+id/text_age"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_age"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:text="@string/age"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="87dp"
        android:layout_height="68dp"
        android:text="@string/gender"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <TextView
        android:id="@+id/text_height"
        android:layout_width="80dp"
        android:layout_height="47dp"
        android:text="@string/height"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:text="@string/weight"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <TextView
        android:id="@+id/text_topic"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:text="@string/app_name"
        android:textColor="#005E8D"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:text="@string/name"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="10pt"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="256dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/text_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_weight"
        app:layout_constraintVertical_bias="0.0" />



    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#A1FF0000"
        android:text="@string/button_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_age"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@+id/text_name"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#1D2C8B"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toBottomOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/button_calculate"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_calculate"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="229dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/text_gender"
        app:layout_constraintTop_toTopOf="@+id/text_gender"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="73dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:buttonTint="#0032FF"
            android:checked="true"
            android:clickable="true"
            android:text="@string/gender_male"
            app:layout_constraintBottom_toBottomOf="@+id/text_gender"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/text_gender"
            app:layout_constraintVertical_bias="0.476" />

        <RadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="216dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:buttonTint="#FF0000"
            android:checked="false"
            android:clickable="true"
            android:text="@string/gender_female"
            app:layout_constraintBottom_toBottomOf="@+id/text_gender"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toEndOf="@+id/radioButton_male"
            app:layout_constraintTop_toTopOf="@+id/text_gender" />

    </RadioGroup>

    <TextView
        android:id="@+id/debugger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="DEBUG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

</android.support.constraint.ConstraintLayout>